Fix Z-index Issue for Clickable Links with Profile Dashboard

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -622,7 +622,6 @@ padding-right:10px
 .db_developer_page .home_box {
   border: 3px solid #eee;
   position:relative;
-  z-index:-2;
 }
 .db_developer_page .home_box,
 .db-contractor_page .home_box {
